--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /01-OOP-Test-reseni/01-OOP-Test-reseni.csproj
+/03-OOP2-Reseni-testu/03-OOP2-Reseni-testu.csproj
