--- a/03-OOP3-08-Kolekce-Bludiste/03-OOP3-08-Kolekce-Bludiste.csproj
+++ b/03-OOP3-08-Kolekce-Bludiste/03-OOP3-08-Kolekce-Bludiste.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="emptymaze.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="micromaze.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="maze.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
